--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,7 +33,7 @@ numpy==1.26.2
 openai==1.3.5
 opencv-python==4.8.1.78
 Pillow==10.1.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pybloom-live==4.0.0
 pycparser==2.21
 pydantic==2.5.2
